# ChangeLog for sys-block/tw_cli
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-block/tw_cli/ChangeLog,v 1.23 2008/02/27 00:39:51 robbat2 Exp $

  27 Feb 2008; Robin H. Johnson <robbat2@gentoo.org> tw_cli-9.4.2.ebuild,
  tw_cli-9.5.0.ebuild:
  Upstream distfiles changed layout slightly, adjust ebuilds to match.

*tw_cli-9.5.0 (26 Feb 2008)
*tw_cli-9.4.2 (26 Feb 2008)

  26 Feb 2008; Robin H. Johnson <robbat2@gentoo.org> +tw_cli-9.4.2.ebuild,
  +tw_cli-9.5.0.ebuild:
  Version bump.

  30 Jul 2007; Christian Faulhammer <opfer@gentoo.org>
  tw_cli-9.4.1.2.ebuild:
  stable x86, bug 186919

  28 Jul 2007; Steve Dibb <beandog@gentoo.org> tw_cli-9.4.1.2.ebuild:
  amd64 stable, bug 186919

*tw_cli-9.4.1.2 (28 Jul 2007)

  28 Jul 2007; Robin H. Johnson <robbat2@gentoo.org> -tw_cli-9.4.1.ebuild,
  +tw_cli-9.4.1.2.ebuild:
  Upstream has modified thier site (noted by Gentoo bug 186881) and made CLI
  versions 9.4.1.0 and 9.4.1.1 point to the 9.4.1.2 release strictly. The
  9.4.1.2 release fixes a large RAID6 bug. The old 9.4.1.* versions are no
  longer available. Upstream also provides a nice ChangeLog page that we now
  link to as HOMEPAGE.

  02 Jul 2007; Piotr Jaroszyński <peper@gentoo.org> tw_cli-9.2.1.1.ebuild,
  tw_cli-9.3.0.2.ebuild, tw_cli-9.3.0.3.ebuild, tw_cli-9.3.0.4.ebuild,
  tw_cli-9.4.0.ebuild, tw_cli-9.4.0.1.ebuild, tw_cli-9.4.1.ebuild:
  (QA) RESTRICT clean up.

*tw_cli-9.4.1 (01 Apr 2007)

  01 Apr 2007; Robin H. Johnson <robbat2@gentoo.org> tw_cli-9.4.0.1.ebuild,
  +tw_cli-9.4.1.ebuild:
  More cleanup of ebuild style for 9.4.0.1. Version bump to 9.4.1 to support
  new variants of 9650SE. If you have any 9xxx card, esp. the 9650SE units, you
  should check your firmware to see if updates are needed!

*tw_cli-9.4.0.1 (01 Apr 2007)

  01 Apr 2007; Robin H. Johnson <robbat2@gentoo.org> +tw_cli-9.4.0.1.ebuild:
  Bug #170492, bump to new upstream version, apparently fixes some bugs with